--- a/templates/commits.html
+++ b/templates/commits.html
@@ -3,26 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Histogramme des Commits</title>
+    <title>Commits par Minute - Donut Chart</title>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
         // Charger Google Charts
         google.charts.load("current", {packages: ["corechart"]});
-        google.charts.setOnLoadCallback(drawChart);
+        google.charts.setOnLoadCallback(fetchCommits);
 
-        // Fonction pour dessiner le graphique après chargement de Google Charts
+        // Fonction pour dessiner le graphique
         function drawChart(commitMinutes) {
             var data = google.visualization.arrayToDataTable(commitMinutes);
 
             var options = {
-                title: 'Distribution des Commits par Minute',
-                hAxis: {title: 'Minute', minValue: 0, maxValue: 59},
-                vAxis: {title: 'Nombre de Commits', minValue: 0},
-                legend: 'none',
-                chartArea: {width: '80%', height: '70%'}
+                title: 'Commits par Minute',
+                pieHole: 0.4,
+                chartArea: {width: '80%', height: '80%'}
             };
 
-            var chart = new google.visualization.ColumnChart(document.getElementById('commit_chart'));
+            var chart = new google.visualization.PieChart(document.getElementById('donutchart'));
             chart.draw(data, options);
         }
 
@@ -47,7 +45,9 @@
 
                     // Convertir minuteCount en format utilisable pour Google Charts
                     for (let i = 0; i < minuteCount.length; i++) {
-                        commitMinutes.push([i.toString(), minuteCount[i]]);
+                        if (minuteCount[i] > 0) {
+                            commitMinutes.push([i.toString() + ' min', minuteCount[i]]);
+                        }
                     }
 
                     // Dessiner le graphique avec les données extraites
@@ -55,13 +55,10 @@
                 })
                 .catch(error => console.error('Erreur lors de la récupération des commits:', error));
         }
-
-        // Appeler fetchCommits pour démarrer la récupération et le rendu du graphique
-        window.onload = fetchCommits;
     </script>
 </head>
 <body>
-    <h1>Histogramme des Commits par Minute</h1>
-    <div id="commit_chart" style="width: 900px; height: 500px;"></div>
+    <h1>Commits par Minute - Donut Chart</h1>
+    <div id="donutchart" style="width: 900px; height: 500px;"></div>
 </body>
 </html>
